--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		        </div>
 		      </div>
 		      <div class="carousel-item">
-		        <img src="image.jpg" class="d-block w-100" alt="...">
+		        <img src="images/image.jpg" class="d-block w-100" alt="...">
 		        <div class="carousel-caption d-none d-md-block" id="paddingforwrite">
 		          <h5>Another example headline.</h5>
 		          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -88,7 +88,7 @@
 		        </div>
 		      </div>
 		      <div class="carousel-item">
-		        <img src="image.jpg" class="d-block w-100" alt="...">
+		        <img src="images/image.jpg" class="d-block w-100" alt="...">
 		        <div class="carousel-caption d-none d-md-block" id="paddingforwrite">
 		          <h5>Another example headline.</h5>
 		          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
